testsuite/tests/quotation/eval/requires_without_uses.compilers.reference
File "requires_without_uses.ml", line 1:
Error: The library /test-root/stdlib/eval.cmxa
       requires metaprogramming support
       but -uses-metaprogramming was not passed
